# OPEN-ROKO

./: HEALTHCHECK.md  HMP.gitignore  HMP.pytest_cache-v-cache-nodeids  LICENSE  README.md  RESUMO.md  SECURITY.md  index.html
HMP/: README.md  pyproject.toml  run_demo.py
HMP/docs/: api-reference.md  architecture.md  protocol.md  syntax.md  tools-reference.md
HMP/examples/: README.md  calculadora.hmp  fibonacci.hmp  hello_world.hmp  lista_compras.hmp  modulo_utilidades.hmp  strings.hmp  tratamento_erros.hmp  usando_import.hmp
HMP/projetos/: README.md  automacao_incidentes.hmp  fluxo_llm_classificacao.hmp  orquestracao_etl_resiliente.hmp  orquestrador_multiagente.hmp
HMP/src/hmp/: __init__.py
HMP/src/hmp/cli/: __init__.py  main.py
HMP/src/hmp/contrib/: __init__.py
HMP/src/hmp/core/: __init__.py  context.py  engine.py
HMP/src/hmp/expr/: __init__.py  cache.py  evaluator.py
HMP/src/hmp/parser/: __init__.py  ast.py  parser.py  tokenizer.py
HMP/src/hmp/runtime/: __init__.py  errors.py
HMP/src/hmp/tools/: __init__.py  base.py  crypto_tools.py  date_tools.py  http_tools.py  json_tools.py  list_tools.py  log_tools.py  math_tools.py  meta_tools.py  random_tools.py  registry.py  string_tools.py  system_tools.py
HMP/tests/: __init__.py
HMP/tests/unit/: __init__.py  test_engine.py
api/: server.py
api/static/css/: style.css
api/templates/: api_docs.html  base.html  engine.html  index.html  openrokos.html  syntax.html  tools.html
tools/: hmp_client.py
