[project]
name = "hmp"
version = "3.0.0"
description = "HMP - Human Machine Protocol: Framework para automacao e orquestracao de fluxos logicos"
authors = [
    {name = "HMP Team", email = "hmp@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "automation",
    "orchestration",
    "macro",
    "protocol",
    "llm",
    "ai",
    "agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
hmp = "hmp.cli.main:main"

[project.entry-points."hmp.tools"]

[project.urls]
Homepage = "https://github.com/hmp-project/hmp"
Documentation = "https://github.com/hmp-project/hmp#readme"
Repository = "https://github.com/hmp-project/hmp"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
